@@ -7,7 +7,7 @@ libdir = $(XINE_PLUGINDIR)/post
 lib_LTLIBRARIES = xineplug_post_audio_filters.la
 
 xineplug_post_audio_filters_la_SOURCES = \
-        upmix.c upmix_mono.c filter.c window.c stretch.c audio_filters.c
+        upmix.c upmix_mono.c filter.c window.c stretch.c volnorm.c audio_filters.c
 xineplug_post_audio_filters_la_LIBADD = $(XINE_LIB) $(THREAD_LIBS)
 xineplug_post_audio_filters_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@ -lm
 
